# aoc2023

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data/: day_01.enc.txt  day_02.enc.txt  day_03.enc.txt  day_04.enc.txt  day_05.enc.txt  day_06.enc.txt  day_07.enc.txt  day_08.enc.txt  day_09.enc.txt  day_10.enc.txt  day_11.enc.txt
fetch_day/: Cargo.toml
fetch_day/src/: main.rs
fetch_day/templates/go/: main.stpl.go
fetch_day/templates/rs/: Cargo.stpl.toml
fetch_day/templates/rs/benches/: bench.stpl.rs
fetch_day/templates/rs/src/: lib.stpl.rs
fetch_day/templates/ts/: day.stpl.ts
rs/day_01/: README.md
rs/day_01/src/: lib.rs
rs/day_02/: README.md
rs/day_02/src/: lib.rs
rs/day_03/: Cargo.toml  README.md
rs/day_03/src/: lib.rs
rs/day_04/: README.md
rs/day_04/src/: lib.rs
rs/day_05/: README.md
rs/day_05/benches/: bench.rs
rs/day_05/src/: lib.rs
rs/day_06/: Cargo.toml  README.md
rs/day_06/benches/: bench.rs
rs/day_06/src/: lib.rs
rs/day_07/: Cargo.toml  README.md
rs/day_07/benches/: bench.rs
rs/day_07/src/: lib.rs
rs/day_08/: Cargo.toml  README.md
rs/day_08/benches/: bench.rs
rs/day_08/src/: lib.rs
rs/day_09/: Cargo.toml  README.md
rs/day_09/benches/: bench.rs
rs/day_09/src/: lib.rs
rs/day_10/: Cargo.toml  README.md
rs/day_10/benches/: bench.rs
rs/day_10/src/: lib.rs
rs/day_11/: Cargo.toml  README.md
rs/day_11/benches/: bench.rs
rs/day_11/src/: lib.rs
